--- a/app/components/ui/left-panel.html
+++ b/app/components/ui/left-panel.html
@@ -164,11 +164,13 @@
   <accordion-group heading="Explanation" is-open="panelState.help" ng-class="{'collapsed': !panelState.help}">
     <p>
     <ul>
-      <li>Select samples and node cut offs from node filter section.</li>
-      <li>Select Ligand - Receptor pairs and edge cut offs from the edge filter section.</li>
+      <li>Select samples and genes from node filter section on the left.</li>
+      <li>Add or remove Ligand - Receptor pairs in the edge filter section.</li>
       <li>Hover over nodes and edges to get more information.</li>
-      <li>Click and drag nodes to move.</li>
-      <li>Double click a node to fix in place.  Double click again to release.</li>
+      <li>Click a node to fix in place.  Click again to release.</li>
+      <li>Ctrl-Click to selected multiple nodes.</li>
+      <li>Add or remove genes by clicking on gene names in the information box.</li>
+      <li>Switch between hive and force directed graph in the options selection</li>
     </ul>
     </p>
   </accordion-group>
