--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -1,4 +1,6 @@
 
+<div ng-controller="PanelCtrl as panels">
+
 <div snap-drawers>
   <div snap-drawer id="ui">
     <div ng-include="'components/ui/left-panel.html'"></div>
@@ -76,8 +78,6 @@
     <span class="icon-bar"></span>
   </button -->
 
-
-
-
+</div>
 
 </div>
