--- a/app/components/ui/main.css
+++ b/app/components/ui/main.css
@@ -41,7 +41,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 350px;
+  width: 100%;
   opacity: 0.9;
 }
 
@@ -184,6 +184,26 @@ height: auto;
   width: 320px;
   overflow-y: auto;
   height: 300px;
+}
+
+.ng-pageslide {
+  background: #eee;
+  padding: 0 3px;
+  box-shadow: 0px 0px 5px #888888;
+}
+
+.pageslide-toggle {
+  position: absolute;
+  top: 5px;
+  z-index: 1010;
+}
+
+.pageslide-toggle.right {
+  right: 10px;
+}
+
+.pageslide-toggle.left {
+  left: 10px;
 }
 
 .panel-right {
