--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -1,18 +1,17 @@
 
 <div ng-controller="PanelCtrl as panels">
 
-<div snap-drawers>
+<!-- div snap-drawers>
   <div snap-drawer id="ui">
     <div ng-include="'components/ui/left-panel.html'"></div>
   </div>
-</div>
+</div -->
 
-<div id="content" snap-content id="content" style="-webkit-transform: translate3d(350px, 0px, 0px);">
+<div id="content">
 
   <noscript>Missing javascript</noscript>
 
   <div id="vis" context-menu="rightClick($event)" style=""
-    class="panel panel-default"
     data-target="myMenu"
     ng-class="{ 'highlight': panels.state.highlight, 'expanded': panels.state.contextmenu }">
     <svg></svg>
@@ -57,24 +56,9 @@
 
   </div>
 
-  <div id="header" class="header row">
-    <button type="button" snap-toggle class="navbar-toggle" title="Click to show options">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <div ui-view="header">
-    </div>
-  </div>
-
-  <div id="footer" class="footer text-center">
-    <p>Made and maintained by J. Harshbarger.</p>
-  </div>
-
 </div>
 
-<div class="panel-right col-xs-3">
+<!-- div class="panel-right col-xs-3">
 
   <div class="col-xs-10 animate-fade pull-right" ng-if="panelState.info">
     <div class="new-tip bg-info" ng-cloak ng-show="graphData.nodes.length > 0">
@@ -93,10 +77,6 @@
 
     <div growl></div>
 
-    <!-- div class="new-tip bg-info hover" ng-cloak ng-if="graphData.hoverItem && !graphData.hoverItem.fixed">
-      <div graph-item="graphData.hoverItem" data="data" graphData="graphData"></div>
-    </div -->
-
     <div ng-repeat="item in graphData.selectedItems track by item.name" class="new-tip" ng-if="item.type" ng-class="item.hover ? 'bg-info' : 'bg-danger'">
       <button type="button" class="close" aria-hidden="true" ng-click="revoveSelectedItem($index)">&times;</button>
       <div ng-include="'components/ui/item.html'">
@@ -104,8 +84,52 @@
     </div>
   </div>
 
-  <div ng-class="" style="padding: 5px; min-width: 40px;">
-    <button type="button" ng-click="panelState.info = !panelState.info" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
+  <div pageslide="right" ps-open="panels.state.info" style="background: #eee;">
+    <div>
+        <p>some random content...</p>
+    </div>
+  </div>
+
+</div -->
+
+  <div pageslide="left" ps-class="ng-pageslide-left" ps-open="panels.state.snapper" ps-size="350px">
+    <div id="ui">
+      <div ng-include="'components/ui/left-panel.html'"></div>
+    </div>
+  </div>
+
+  <div pageslide="right" ps-class="ng-pageslide-right" ps-open="panels.state.info" ps-size="350px">
+    <div>
+
+      <div class="" ng-if="panelState.info">
+        <div class="new-tip" ng-cloak ng-show="graphData.nodes.length > 0">
+          <ul class="list-unstyled">
+            <li>Samples: <span ng-bind="selectedIds.cells.length"></span> / <span bindonce="data.cells" bo-text="data.cells.length"></span></li>
+            <li>Genes:   <span ng-bind="selectedIds.genes.length"></span> / <span bindonce="data.genes" bo-text="data.genes.length"></span></li>
+            <li>Pairs:   <span ng-bind="selectedIds.pairs.length"></span> / <span bindonce="data.pairs" bo-text="data.pairs.length"></span></li>
+          </ul>
+          <ul class="list-unstyled">
+
+            <li>Nodes: <span ng-bind="graphData._nodes.length"></span> / <span ng-bind="graphData.nodes.length"></span></li>
+            <li>Edges: <span ng-bind="graphData._edges.length"></span> / <span ng-bind="graphData.edges.length"></span></li>
+
+          </ul>
+        </div>
+
+        <div growl></div>
+
+        <div ng-repeat="item in graphData.selectedItems track by item.name" class="new-tip" ng-class="item.hover ? 'bg-warning' : 'bg-danger'" ng-if="item.type">
+          <button type="button" class="close" aria-hidden="true" ng-click="revoveSelectedItem($index)">&times;</button>
+          <div ng-include="'components/ui/item.html'">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="pageslide-toggle left">
+    <button type="button" ng-click="panelState.snapper = !panelState.snapper" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -113,13 +137,13 @@
     </button>
   </div>
 
-  <!-- button type="button" class="navbar-toggle" title="Click to show stats" style="display: inline-block; position: relative;">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button -->
-
-</div>
+  <div class="pageslide-toggle right">
+    <button type="button" ng-click="panelState.info = !panelState.info" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
 
 </div>
