--- a/app/components/ui/item.html
+++ b/app/components/ui/item.html
@@ -1,8 +1,8 @@
-<div class="animate-switch-container" ng-switch on="item.type">
-	<div class="animate-switch" ng-switch-when="gene" bindonce="item">
+<div class="animate-switch-container"  bindonce="item" bo-switch="item.type">
+	<div class="animate-switch" bo-switch-when="gene">
 	  <ul  class="list-unstyled">
 	    <li>
-	    	{{item.class}}: <span bindonce bo-text="item.name"></span>
+	    	<span bo-text="item.class"></span>: <span bindonce bo-text="item.name"></span>
 	    </li>
 	  </ul>
 	  <div
@@ -12,16 +12,28 @@
 	  	label=""
 	  	title="Show more information">
 		  <ul class="list-unstyled">
-		  	<li ng-if="item.class == 'ligand'">Paired receptors: <span expression-list="item.receptors" key="i" array="data.genes"></span></li>
-		  	<li ng-if="item.class == 'receptor'">Paired ligands: <span expression-list="item.ligands" key="i" array="data.genes"></span></li>
-	      	<li bindonce ng-repeat="(k,v) in item.meta" bo-text="k + ': ' + v"></li>
+		  	<li ng-if="item.class == 'ligand'">
+		  		Paired receptors:
+		  		<span neighbors-list="graphData.outEdgesIndex[item.id]"
+		  			key="target"
+		  			array="graphData.nodesIndex"></span>
+		  	</li>
+		  	<li ng-if="item.class == 'receptor'">
+		  		Paired ligands:
+		  		<span neighbors-list="graphData.inEdgesIndex[item.id]"
+		  			key="source"
+		  			array="graphData.nodesIndex"></span>
+		  		</li>
+	      	<li>Age: <span bo-text="item['age']"></span></li>
+					<li>Taxon: <span bo-text="item['taxon']"></span></li>
+					<li>UniProtID: <span bo-text="item['uniprotid']"></span></li>
 	      </ul>
 	  </div>
 
 	</div>
 
 	<div class="animate-switch"
-		ng-switch-when="sample"
+		bo-switch-when="sample"
 		bindonce="item">
 	  <ul
 			class="list-unstyled"
@@ -75,28 +87,28 @@
 						array="graphData.nodesIndex"></span>
 		    </li>
 		    <li><ul class="list-unstyled">
-		      <li ng-repeat="(k,v) in item.meta" bo-text="k + ': ' + v"></li>
+		      <li bindonce ng-repeat="(k,v) in item.meta" bo-text="k + ': ' + v"></li>
 		    </ul></li>
 		  </ul>
 	  </div>
 
 	</div>
 
-	<div class="animate-switch" ng-switch-when="sample-sample" bindonce="item">
+	<div class="animate-switch" bo-switch-when="sample-sample" bindonce="item">
 		<ul  class="list-unstyled">
 			<li>Expression: <span bo-text="item.name"></span></li>
-			<li>Expression product: <span ng-bind="item.value | number:2">
+			<li>Expression product: <span ng-bind="item.value | number:2"></li>
 		</ul>
 	</div>
 
-	<div class="animate-switch" ng-switch-when="expression" bindonce="item">
+	<div class="animate-switch" bo-switch-when="expression" bindonce="item">
 	  <ul  class="list-unstyled">
 	    <li>Expression: <span bo-text="item.name"></span></li>
-	    <li>Expression value: <span ng-bind="item.value | number:2">
+	    <li>Expression value: <span ng-bind="item.value | number:2"></li>
 	  </ul>
 	</div>
 
-	<div class="animate-switch" ng-switch-when="pair">
+	<div class="animate-switch" bo-switch-when="pair">
 	  <ul  class="list-unstyled">
 	    <li>L-R Pair: <span bindonce bo-text="item.name"></span></li>
 	  </ul>
