--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -107,22 +107,20 @@
 
     <div class="" ng-if="panels.state.info">
       <div class="new-tip" ng-cloak ng-show="graphData.nodes.length > 0">
-        <ul class="list-unstyled">
-          <li>Samples: <span ng-bind="selectedIds.cells.length"></span> / <span bindonce="data.cells" bo-text="data.cells.length"></span></li>
-          <li>Genes:   <span ng-bind="selectedIds.genes.length"></span> / <span bindonce="data.genes" bo-text="data.genes.length"></span></li>
-          <li>Pairs:   <span ng-bind="selectedIds.pairs.length"></span> / <span bindonce="data.pairs" bo-text="data.pairs.length"></span></li>
+        <ul class="list-unstyled" bindonce="data">
+          <li>Samples: <span ng-bind="selectedIds.cells.length"></span> / <span bo-text="data.cells.length"></span></li>
+          <li>Genes:   <span ng-bind="selectedIds.genes.length"></span> / <span bo-text="data.genes.length"></span></li>
+          <li>Pairs:   <span ng-bind="selectedIds.pairs.length"></span> / <span bo-text="data.pairs.length"></span></li>
         </ul>
-        <ul class="list-unstyled">
-
-          <li>Nodes: <span ng-bind="graphData._nodes.length"></span> / <span ng-bind="graphData.nodes.length"></span></li>
-          <li>Edges: <span ng-bind="graphData._edges.length"></span> / <span ng-bind="graphData.edges.length"></span></li>
-
+        <ul class="list-unstyled" bindonce="graphData">
+          <li>Nodes: <span bo-text="graphData._nodes.length"></span> / <span bo-text="graphData.nodes.length"></span></li>
+          <li>Edges: <span bo-text="graphData._edges.length"></span> / <span bo-text="graphData.edges.length"></span></li>
         </ul>
       </div>
 
       <div growl></div>
 
-      <div ng-repeat="item in graphData.selectedItems track by item.name" class="new-tip" ng-class="item.hover ? 'bg-warning' : 'bg-danger'" ng-if="item.type">
+      <div ng-repeat="item in graphData.selectedItems track by item.id" class="new-tip" ng-class="item.hover ? 'bg-warning' : 'bg-danger'" ng-if="item.type">
         <button type="button" class="close" aria-hidden="true" ng-click="revoveSelectedItem($index)">&times;</button>
         <div ng-include="'components/ui/item.html'">
         </div>
