--- a/app/components/ui/pageslide.css
+++ b/app/components/ui/pageslide.css
@@ -34,12 +34,31 @@
   left: 10px;
 }
 
+.pageslide-toggle.bottom {
+  top: 10px;
+}
+
 .pageslide-right {
   right: 0px;
 }
 
 .pageslide-left {
   left: 0px;
+}
+
+.pageslide-bottom {
+  left: 0px;
+  right: 0px;
+  top: auto;
+  bottom: 0px;
+  height: 400px;
+  width: auto;
+}
+
+.pageslide-bottom .gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 100%;
+    height: 300px;
 }
 
 .pageslide.ng-hide > div, .pageslide.ng-hide-remove > div {
@@ -55,4 +74,10 @@
   /* width: 0px; */
   -webkit-transform: translateX(-345px); /* Chrome, Safari, Opera */
   transform: translateX(-345px);
+}
+
+.pageslide-bottom.ng-hide {
+  /* width: 0px; */
+  -webkit-transform: translateY(335px); /* Chrome, Safari, Opera */
+  transform: translateY(335px);
 }
