--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -1,12 +1,4 @@
 
-<div ng-controller="PanelCtrl as panels">
-
-<!-- div snap-drawers>
-  <div snap-drawer id="ui">
-    <div ng-include="'components/ui/left-panel.html'"></div>
-  </div>
-</div -->
-
 <div id="content">
 
   <noscript>Missing javascript</noscript>
@@ -21,7 +13,7 @@
 
         <li ng-if="clickedItem" ng-click="clickedItem.fixed = true; updateSelection()" class="dropdown-header">{{clickedItem.name}}</li>
 
-        <li  class="dropdown-submenu" ng-if="clickedItem.type == 'sample' || clickedItem.type == 'gene'">
+        <li ng-if="clickedItem.type == 'sample' || clickedItem.type == 'gene'">
           <a class="pointer" role="menuitem" ng-click="clickedItem.ticked = false">Hide</a>
         </li>
 
@@ -41,22 +33,6 @@
 
         <li ng-click="state"><a class="pointer" ng-click="reset()">Reset visualization</a></li>
 
-        <li class="dropdown-submenu">
-          <a class="pointer" role="menuitem">Panels</a>
-          <ul class="dropdown-menu">
-            <li>
-              <a class="pointer" role="menuitem" ng-click="panels.state.snapper = !panels.state.snapper">
-                <span ng-bind="panels.state.snapper ? '&#x2713;' : '&nbsp;'"></span> Options panel
-              </a>
-            </li>
-            <li>
-              <a class="pointer" role="menuitem" ng-click="panels.state.info = !panels.state.info">
-                <span ng-bind="panels.state.info ? '&#x2713;' : '&nbsp;'"></span> Info panel
-              </a>
-            </li>
-          </ul>
-        </li>
-
       </ul>
     </div>
 
@@ -64,47 +40,9 @@
 
 </div>
 
-<!-- div class="panel-right col-xs-3">
-
-  <div class="col-xs-10 animate-fade pull-right" ng-if="panelState.info">
-    <div class="new-tip bg-info" ng-cloak ng-show="graphData.nodes.length > 0">
-      <ul class="list-unstyled">
-        <li>Samples: <span ng-bind="selectedIds.cells.length"></span> / <span bindonce="data.cells" bo-text="data.cells.length"></span></li>
-        <li>Genes:   <span ng-bind="selectedIds.genes.length"></span> / <span bindonce="data.genes" bo-text="data.genes.length"></span></li>
-        <li>Pairs:   <span ng-bind="selectedIds.pairs.length"></span> / <span bindonce="data.pairs" bo-text="data.pairs.length"></span></li>
-      </ul>
-      <ul class="list-unstyled">
-
-        <li>Nodes: <span ng-bind="graphData._nodes.length"></span> / <span ng-bind="graphData.nodes.length"></span></li>
-        <li>Edges: <span ng-bind="graphData._edges.length"></span> / <span ng-bind="graphData.edges.length"></span></li>
-
-      </ul>
-    </div>
-
-    <div growl></div>
-
-    <div ng-repeat="item in graphData.selectedItems track by item.name" class="new-tip" ng-if="item.type" ng-class="item.hover ? 'bg-info' : 'bg-danger'">
-      <button type="button" class="close" aria-hidden="true" ng-click="revoveSelectedItem($index)">&times;</button>
-      <div ng-include="'components/ui/item.html'">
-      </div>
-    </div>
-  </div>
-
-  <div pageslide="right" ps-open="panels.state.info" style="background: #eee;">
-    <div>
-        <p>some random content...</p>
-    </div>
-  </div>
-
-</div -->
-
-  <div class="pageslide pageslide-left" ng-show="panels.state.snapper">
-    <div id="ui" ng-if="panels.state.snapper" ng-include="'components/ui/left-panel.html'">
-    </div>
-  </div>
+<div ng-controller="PanelCtrl as panels" ng-cloak>
 
   <div class="pageslide pageslide-right" ng-show="panels.state.info" >
-
     <div class="" ng-if="panels.state.info">
       <div class="new-tip" ng-cloak ng-show="graphData.nodes.length > 0">
         <ul class="list-unstyled" bindonce="data">
@@ -126,16 +64,6 @@
         </div>
       </div>
     </div>
-
-  </div>
-
-  <div class="pageslide-toggle left">
-    <button type="button" ng-click="panelState.snapper = !panelState.snapper" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
   </div>
 
   <div class="pageslide-toggle right">
@@ -147,34 +75,7 @@
     </button>
   </div>
 
-  <div class="pageslide pageslide-bottom" ng-show="panelState.data">
-    <ul class="nav nav-tabs" role="tablist">
-      <li ng-class="{ active: panelState.tab == 1 }"><a href ng-click="panelState.data = true; panelState.tab = 1">Samples</a></li>
-      <li ng-class="{ active: panelState.tab == 2 }"><a href ng-click="panelState.data = true; panelState.tab = 2">Genes</a></li>
-      <li ng-class="{ active: panelState.tab == 3 }"><a href ng-click="panelState.data = true; panelState.tab = 3">Pairs</a></li>
-      <li class="pull-right">
-        <button type="button" ng-click="panelState.data = !panelState.data" class="navbar-toggle pull-right" title="Click to show options" style="display: inline-block;">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </li>
-    </ul>
-
-    <div class="tab-content" ng-switch="panelState.tab" ng-if="panelState.data">
-        <div class="tab-pane active" ng-switch-when="1">
-          <div class="gridStyle" ng-grid="gridOptions.cells"></div>
-        </div>
-        <div class="tab-pane active" ng-switch-when="2">
-          <div class="gridStyle" ng-grid="gridOptions.genes"></div>
-        </div>
-        <div class="tab-pane active" ng-switch-when="3">
-          <div class="gridStyle" ng-grid="gridOptions.pairs"></div>
-        </div>
-      </div>
-    </div>
-
+  <div class="pageslide pageslide-bottom" ng-show="panels.state.data" ng-include="'components/ui/bottom-panel.html'">
   </div>
 
 </div>
