--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -31,7 +31,8 @@
 
         <li class="divider" ng-if="clickedItem.type == 'sample' || clickedItem.type == 'gene'"></li>
 
-        <li ng-click="state"><a class="pointer" ng-click="reset()">Reset visualization</a></li>
+        <li><a class="pointer" ng-click="clearVis()">Clear visualization</a></li>
+        <li><a class="pointer" ng-click="resetVis()">Default visualization</a></li>
 
       </ul>
     </div>
