--- a/app/components/ui/bottom-panel.html
+++ b/app/components/ui/bottom-panel.html
@@ -88,7 +88,7 @@
 
           <p />
           <div>
-            <span>Edge cutoff</span>
+            <span>Expression edge cutoff</span>
             <div class="pull-right small ng-binding">top {{options.edgeRankFilter | percentage}}</div>
           </div>
 
